--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">DemoProject</string>
     <string name="action_settings">Settings</string>
+    <string name="login">Login</string>
+    <string name="name_hint">Username</string>
+    <string name="password_hint">Password</string>
+    <string name="remember_password">Remember password</string>
+    <string name="remember_name">Remember username</string>
+
 </resources>
