-added loginactivity -login fragment excluded from nainactivity -added credentials method parameters - toolbar removed from fragments - toolbar added to activities - added navigation drawer without click lsiteners currently - fixed amny layout bugs - styles fixed - navigation drawer, added hamburger button to toolbar - added on backpressed method

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="fill_in_password">Please enter password</string>
     <string name="toolbar_repos_list">Repository List</string>
     <string name="menu_signout">Logout</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 
 </resources>
