--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,8 @@
     <string name="menu_signout">Logout</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+    <string name="alert_delete_ok">OK</string>
+    <string name="alert_delete_cancel">Cancel</string>
+    <string name="logout_message">Are you sure you want to logout?</string>
 
 </resources>
