--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="alert_delete_ok">OK</string>
     <string name="alert_delete_cancel">Cancel</string>
     <string name="logout_message">Are you sure you want to logout?</string>
+    <string name="get_avatar_error">Get avatar error</string>
 
 </resources>
