--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,7 @@
     <string name="settings_auto_sync_timer">Synchronization</string>
     <string name="settings_auto_sync_timer_value">Every %d minutes</string>
 
+    <string name="progress_dialog_loading">Loading…</string>
+
 
 </resources>
