added repo_details_fragment class and layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="settings_auto_sync_timer_value">Every %d minutes</string>
 
     <string name="progress_dialog_loading">Loading…</string>
-
+    <string name="toolbar_repos_details">Repository details</string>
+    <string name="repo_size">%f Megabytes</string>
+    <string name="unknown_language">unknown</string>
 
 </resources>
