--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="toolbar_repos_details">Repository details</string>
     <string name="repo_size">%f Megabytes</string>
     <string name="unknown_language">unknown</string>
+    <string name="notification_error_title">Network Error</string>
+    <string name="notification_error_text">Click to open repository list.</string>
 
 </resources>
