--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="fill_in_username">Please enter username</string>
     <string name="fill_in_password">Please enter password</string>
     <string name="toolbar_repos_list">Repository List</string>
+    <string name="toolbar_repos_sync">Repository Synchronization Log</string>
+    <string name="toolbar_repos_like_list">Repository Like List</string>
     <string name="menu_signout">Logout</string>
     <string name="menu_settings">Settings</string>
     <string name="drawer_open">Open navigation drawer</string>
