--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="repo_update_failed">"Couldn't update your repo"</string>
     <string name="credentials_error">Wrong username and/or password</string>
     <string name="network_error">Wrong user or some network error</string>
+    <string name="repoList_network_error">Network error !</string>
     <string name="fill_in_username">Please enter username</string>
     <string name="fill_in_password">Please enter password</string>
     <string name="toolbar_repos_list">Repository List</string>
