made all fixes after meeting except mainactivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
 
     <string name="mihail_likes_it">Mihail Bohnearschi likes this app</string>
     <string name="ivan_likes_it">Ivan Croitor likes this app</string>
+    <string name="refreshList">refreshList</string>
 </resources>
