--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,5 @@
     <string name="successful_login_tag">successful_login</string>
     <string name="credential_error_tag">credential_error</string>
     <string name="connection_error_tag">connection_error</string>
+    <string name="commits_list">%s Commits</string>
 </resources>
